@@ -1,3 +1,6 @@
+
+Fixed bug with password reset module, fixed typo in example form
+
 ------------------------------------------------------------------------------
 sux0r 2.2.0
 ------------------------------------------------------------------------------
